# ScalableVectorSearch

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  HISTORY.md  LICENSE  NEWS.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-PROGRAMS  VERIFICATION_SUMMARY.md  benchmark_results.txt  faq.html  features.html  genindex.html  howtos.html  index.html  intro.html  io.html  logging.html  non-open-source-notice.html  objects.inv  pr196_analysis.md  pr196_final_report.md  prerequisites.html  py-modindex.html  roadmap.html  search.html  searchindex.js  start.html  start_cpp.html  vector_compression.html
benchmark/: AGENTS.md  CMakeLists.txt
benchmark/include/svs-benchmark/: benchmark.h  build.h  datasets.h  executable.h  index_traits.h  search.h  test.h
benchmark/src/: benchmark.cpp  datasets.cpp  main.cpp
benchmark/src/inverted/: inverted.cpp
benchmark/src/ivf/: build.cpp  search.cpp  test.cpp  uncompressed.cpp
benchmark/src/vamana/: build.cpp  iterator.cpp  leanvec.cpp  lvq.cpp  search.cpp  test.cpp  uncompressed.cpp
bindings/c/: CMakeLists.txt  SVS_C_API_Design.md  c_apiConfig.cmake.in
bindings/c/samples/: CMakeLists.txt  dynamic.c  save_load.c  simple.c
bindings/c/src/: algorithm.hpp  allocator.hpp  data_builder.hpp  dispatcher_dynamic_vamana.cpp  dispatcher_dynamic_vamana.hpp  dispatcher_vamana.cpp  dispatcher_vamana.hpp  error.cpp  error.hpp  index.hpp  index_builder.hpp  storage.hpp  svs_c.cpp  thread_pool.hpp  threadpool.hpp  types_support.hpp
bindings/c/tests/: CMakeLists.txt  README.md  c_api_algorithm.cpp  c_api_dynamic_index.cpp  c_api_error.cpp  c_api_index.cpp  c_api_index_builder.cpp  c_api_search_params.cpp  c_api_storage.cpp
bindings/cpp/: AGENTS.md  CMakeLists.txt  runtimeConfig.cmake.in
bindings/cpp/conda-recipe/: build.sh  meta.yaml
bindings/cpp/include/: IndexSVSFlatImpl.h  IndexSVSImplDefs.h  IndexSVSTrainingInfo.h  IndexSVSVamanaImpl.h  IndexSVSVamanaLVQImpl.h  IndexSVSVamanaLeanVecImpl.h  dynamic_vamana_index.h  flat_index.h  training.h  vamana_index.h  version.h
bindings/cpp/src/: IndexSVSFlatImpl.cpp  IndexSVSImplDefs.cpp  IndexSVSImplUtils.h  IndexSVSTrainingInfo.cpp  IndexSVSVamanaImpl.cpp  IndexSVSVamanaLVQImpl.cpp  IndexSVSVamanaLeanVecImpl.cpp  api_defs.cpp  dynamic_ivf_index.cpp  dynamic_ivf_index_impl.h  dynamic_vamana_index.cpp  dynamic_vamana_index_impl.h  dynamic_vamana_index_leanvec_impl.h  flat_index.cpp  flat_index_impl.h  ivf_index.cpp  ivf_index_impl.h  svs_runtime_utils.h  training.cpp  training_impl.h  vamana_index.cpp  vamana_index_impl.h
bindings/cpp/tests/: CMakeLists.txt  ivf_runtime_test.cpp  runtime_test.cpp  test_version_namespace.cpp  utils.h
bindings/python/: .gitignore  AGENTS.md  CMakeLists.txt  microarch.py  pyproject.toml  setup.py
bindings/python/src/: allocator.cpp  allocator.h  common.h  conversion.cpp  conversion.h  core.cpp  core.h  dispatch.h  dynamic_flat.cpp  dynamic_ivf.cpp  dynamic_vamana.cpp  dynamic_vamana.h  flat.cpp  flat.h  instantiations.cpp  ivf.cpp  manager.h  python_bindings.cpp  svs_mkl.cpp  svs_mkl.h  vamana.cpp  vamana.h  vamana_common.cpp  vamana_common.h
bindings/python/tests/: __init__.py  common.py  dataset.py  dynamic.py  test_common.py  test_dynamic_flat.py  test_dynamic_ivf.py  test_dynamic_vamana.py  test_flat.py  test_ivf.py  test_loader.py  test_loader_api.py  test_microarch.py  test_mkl.py  test_reconstruction.py  test_vamana.py  test_vamana_common.py
docs/: CMakeLists.txt  conf.py  faq.rst  features.rst  file_format.md  howtos.rst  index.rst  intro.rst  io.rst  logging.rst  prerequisites.rst  requirements.txt  roadmap.rst  start.rst  start_cpp.rst
docs/_static/css/: custom.css
docs/advanced/: build.rst  graph_search.rst  index.rst  lowermem.rst  static_dimensionality.rst
docs/benchs/: ablation.rst  dynamic.rst  experimental_method.rst  index.rst  large_scale_benchs.rst  small_scale_benchs.rst  system_utilization.rst
docs/benchs/static/: index.rst  latest.rst  previous.rst
docs/cpp/: testing.rst  top.rst
docs/cpp/concepts/: data.rst  distance.rst  graph.rst  index.rst
docs/cpp/core/: data.rst  distance.rst  graph.rst  index.rst  logging.rst  query_result.rst  recall.rst
docs/cpp/index/: dynamic_vamana.rst  index.rst  loader-compatibility.csv  vamana.rst
docs/cpp/internal/: allocators.rst  index.rst
docs/cpp/quantization/: lvq.rst
docs/performance/: avx512.rst  hugepages.rst  index.rst  numa.rst  using_compression.rst
docs/python/: backend.rst  common.rst  dynamic.rst  flat.rst  loaders.rst  logging.rst  upgrader.rst  vamana.rst
docs/python/experimental/: dynamic_vamana.rst  leanvec.rst
examples/cpp/: CMakeLists.txt  README.md  custom_thread_pool.cpp  dispatcher.cpp  fallback.cpp  hello_world.cpp  microarch_info.cpp  saveload.cpp  svsmain.h  test_dataset.py  types.cpp  vamana.cpp  vamana_iterator.cpp
examples/cpp/shared/: CMakeLists.txt  (+9 more)
tests/: AGENTS.md  CMakeLists.txt
tests/benchmark/: benchmark.cpp
tests/integration/: cancel.cpp  exhaustive.cpp  index_build.cpp  index_search.cpp  lvq_search.cpp
tests/shared/: README.md  shared.cpp  svsmain.h  utils.h
tests/utils/: benchmarks.cpp  benchmarks.h  generators.cpp  generators.h  inverted_reference.cpp  inverted_reference.h  ivf_reference.cpp  ivf_reference.h  lvq_reconstruction.cpp  lvq_reconstruction.h  require_error.cpp  require_error.h  schemas.cpp  schemas.h  test_dataset.cpp  test_dataset.h  utils.cpp  utils.h  vamana_reference.cpp  vamana_reference.h  vq_dataset.cpp  vq_dataset.h
utils/: AGENTS.md  CMakeLists.txt  assemble_vamana.cpp  build_index.cpp  build_ivf.cpp  codegen.cpp  compute_recall.cpp  convert_data_to_bfloat16.cpp  convert_data_to_float16.cpp  convert_legacy.cpp  generate_vamana_config.cpp  graph_stat.cpp  logging.cpp  search_index.cpp  search_index_numa.cpp  search_ivf.cpp  svsmain.h  upgrade_vamana_index_parameters.cpp
utils/benchmarks/: index_build.cpp
utils/characterization/: consolidate.cpp  mutable.cpp
utils/quantization/: build_quantized.cpp  clustered_lvq.cpp  dynamic_lvq.cpp
(+787 files in other folders)
